--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,14 +1,16 @@
-FROM alpine 3.20.6
+FROM alpine:3.20.6
 
-# Install MariaDB using apk
-RUN apk update && apk add --no-cache mariadb mariadb-client mariadb-server-utils
+RUN apk update && \
+	apk add --no-cache \
+	mariadb \
+	mariadb-client
 
-# Create required directories
-RUN mkdir -p /var/lib/mysql /run/mysqld /var/log/mysql && \
-    chown -R mysql:mysql /var/lib/mysql /run/mysqld /var/log/mysql
-
-# Expose the MariaDB default port
 EXPOSE 3306
 
-# Start MariaDB when the container runs
-CMD ["mysqld", "--datadir=/var/lib/mysql", "--user=mysql"]
+COPY conf/mariadb-server.cnf /etc/my.cnf.d/mariadb-server.cnf
+RUN chmod 644 /etc/my.cnf.d/mariadb-server.cnf
+
+COPY ./tools/script.sh /tmp/script.sh
+RUN chmod +x /tmp/script.sh
+
+ENTRYPOINT ["sh", "/tmp/script.sh"]
