--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -7,10 +7,10 @@ RUN apk update && \
 
 EXPOSE 3306
 
-COPY conf/mariadb-server.cnf /etc/my.cnf.d/mariadb-server.cnf
+COPY ./requirements/mariadb/conf/mariadb-server.cnf /etc/my.cnf.d/mariadb-server.cnf
 RUN chmod 644 /etc/my.cnf.d/mariadb-server.cnf
 
-COPY ./tools/script.sh /tmp/script.sh
+COPY ./requirements/mariadb/tools/script.sh /tmp/script.sh
 RUN chmod +x /tmp/script.sh
 
 ENTRYPOINT ["sh", "/tmp/script.sh"]
