--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,7 +4,7 @@ volumes:
         driver: local
         driver_opts:
             type: none
-            device: /var/lib/mysql
+            device: /home/esalmela/data/mariadb
             o: bind
 
 networks:
@@ -21,7 +21,7 @@ services:
         ports:
             - "3306:3306"
         volumes:
-            - mariadb_data:/var/lib/mysql
+            - mariadb:/var/lib/mysql
         networks:
             - inception
         env_file:
