compiles but does not work

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -30,7 +30,7 @@ http {
 
 		location ~ \.php$ {
 			include fastcgi_params;
-			fastcgi_pass wordpress-cont:9000;
+			fastcgi_pass wordpress:9000;
 			fastcgi_index index.php;
 			fastcgi_split_path_info ^(.+\.php)(/.+)$;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
