--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,37 +1,39 @@
 FROM alpine:3.20.6
 
 RUN addgroup -S nginx && \
-	adduser -S -G nginx nginx
+    adduser -S -G nginx nginx
 
 RUN apk update && apk add --no-cache \
-		php \
-		php-fpm \
-		php-mysqli \
-		php-mbstring \
-		php-json \
-		php-session \
-		php-common \
-		php-iconv \
-		php-xml \
-		php-xmlreader \
-		php-xmlwriter \
-		php-simplexml \
-		php-tokenizer \
-		php-ctype \
-		php-dom \
-		php-pdo \
-		php-pdo_mysql \
-		php-pdo_sqlite \
-		php-phar \
-		php-posix \
-		php-openssl \
-		php-session \
-		mariadb-client
-
+        php8 \
+        php8-fpm \
+        php8-mysqli \
+        php8-mbstring \
+        php8-json \
+        php8-session \
+        php8-common \
+        php8-iconv \
+        php8-xml \
+        php8-xmlreader \
+        php8-xmlwriter \
+        php8-simplexml \
+        php8-tokenizer \
+        php8-ctype \
+        php8-dom \
+        php8-pdo \
+        php8-pdo_mysql \
+        php8-pdo_sqlite \
+        php8-phar \
+        php8-posix \
+        php8-openssl \
+        php8-session \
+        mariadb-client \
+        wget \
+        curl \
+        tar
 
 EXPOSE 9000
 
-RUN ln -sf /usr/bin/php /usr/bin/php
+RUN ln -sf /usr/bin/php8 /usr/bin/php
 
 RUN mkdir -p /run/php /var/www/html
 
@@ -42,7 +44,3 @@ COPY ./requirements/wordpress/tools/script.sh /tmp/script.sh
 RUN chmod +x /tmp/script.sh
 
 ENTRYPOINT ["sh", "/tmp/script.sh"]
-
-
-
-
