--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,28 +4,28 @@ RUN addgroup -S nginx && \
     adduser -S -G nginx nginx
 
 RUN apk update && apk add --no-cache \
-        php8 \
-        php8-fpm \
-        php8-mysqli \
-        php8-mbstring \
-        php8-json \
-        php8-session \
-        php8-common \
-        php8-iconv \
-        php8-xml \
-        php8-xmlreader \
-        php8-xmlwriter \
-        php8-simplexml \
-        php8-tokenizer \
-        php8-ctype \
-        php8-dom \
-        php8-pdo \
-        php8-pdo_mysql \
-        php8-pdo_sqlite \
-        php8-phar \
-        php8-posix \
-        php8-openssl \
-        php8-session \
+        php \
+        php-fpm \
+        php-mysqli \
+        php-mbstring \
+        php-json \
+        php-session \
+        php-common \
+        php-iconv \
+        php-xml \
+        php-xmlreader \
+        php-xmlwriter \
+        php-simplexml \
+        php-tokenizer \
+        php-ctype \
+        php-dom \
+        php-pdo \
+        php-pdo_mysql \
+        php-pdo_sqlite \
+        php-phar \
+        php-posix \
+        php-openssl \
+        php-session \
         mariadb-client \
         wget \
         curl \
@@ -39,8 +39,8 @@ RUN mkdir -p /run/php /var/www/html
 
 COPY ./requirements/wordpress/conf/www.conf /etc/php8/php-fpm.d/www.conf
 
-COPY ./requirements/wordpress/tools/script.sh /tmp/script.sh
+COPY ./requirements/wordpress/tools/wpscript.sh /tmp/wpscript.sh
 
-RUN chmod +x /tmp/script.sh
+RUN chmod +x /tmp/wpscript.sh
 
-ENTRYPOINT ["sh", "/tmp/script.sh"]
+ENTRYPOINT ["sh", "/tmp/wpscript.sh"]
