--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -26,7 +26,11 @@ http {
 		ssl_certificate_key /etc/nginx/ssl/inception.key; # the SSL certificate key
 
 		root /var/www/html; # the root directory
-		index index.php index.html index.htm; # the index files
+		index index.php index.html index.htm; # the index filesa
+
+		location / {
+			try_files $uri $uri/ /index.php?args;
+		}
 
 		location ~ \.php$ {
 			include fastcgi_params;
@@ -35,6 +39,10 @@ http {
 			fastcgi_split_path_info ^(.+\.php)(/.+)$;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			fastcgi_param PATH_INFO $fastcgi_path_info;
+		}
+
+		location ~ /\.ht {
+			deny  all;
 		}
 	}
 }
