--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -44,5 +44,10 @@ http {
 		location ~ /\.ht {
 			deny  all;
 		}
+
+		location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+           		expires max;
+            		log_not_found off;
+        	}
 	}
 }
