--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -22,15 +22,15 @@ http {
 		server_name esalmela.42.fr; # the server name
 
 		ssl_protocols TLSv1.2 TLSv1.3; # the SSL protocols
-		ssl_certificate /etc/letsencrypt/live/esalmela.42.fr/fullchain.pem; # the SSL certificate
-		ssl_certificate_key /etc/letsencrypt/live/esalmela.42.fr/privkey.pem # the SSL certificate key
+		ssl_certificate /etc/nginx/ssl/inception.crt; # the SSL certificate
+		ssl_certificate_key /etc/nginx/ssl/inception.key; # the SSL certificate key
 
 		root /var/www/html; # the root directory
 		index index.php index.html index.htm; # the index filesa
 
-		#		location / {
-		#		try_files $uri $uri/ /index.php?$args;
-		#		}
+				location / {
+				try_files $uri $uri/ /index.php?$args;
+				}
 
 		location ~ \.php$ {
 			include fastcgi_params;
@@ -41,10 +41,10 @@ http {
 			fastcgi_param PATH_INFO $fastcgi_path_info;
 		}
 
-		#		location ~ /\.ht {
+		#				location ~ /\.ht {
 		#			deny  all;
 		#		}
-
+		#
 		#		location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
 		#	expires max;
 		#	log_not_found off;
