--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -17,7 +17,7 @@ http {
 
 	server {
 		listen 443 ssl; # the port on which the server listens
-		listen [::]:443 ssl; # the port on which the server listens
+		listen [::]:443 ssl; # the port on which the server listens ipv6
 
 		server_name esalmela.42.fr; # the server name
 
@@ -40,14 +40,5 @@ http {
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			fastcgi_param PATH_INFO $fastcgi_path_info;
 		}
-
-		#				location ~ /\.ht {
-		#			deny  all;
-		#		}
-		#
-		#		location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-		#	expires max;
-		#	log_not_found off;
-		#	}
 	}
 }
