--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -10,7 +10,7 @@ EXPOSE 3306
 COPY ./requirements/mariadb/conf/mariadb-server.cnf /etc/my.cnf.d/mariadb-server.cnf
 RUN chmod 644 /etc/my.cnf.d/mariadb-server.cnf
 
-COPY ./requirements/mariadb/tools/script.sh /tmp/script.sh
-RUN chmod +x /tmp/script.sh
+COPY ./requirements/mariadb/tools/init_mariadb.sh /tmp/init_mariadb.sh
+RUN chmod +x /tmp/init_mariadb.sh
 
-ENTRYPOINT ["sh", "/tmp/script.sh"]
+ENTRYPOINT ["sh", "/tmp/init_mariadb.sh"]
